more complete html doc

--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,12 @@
 <!doctype html>
-<title>Sticky Example</title>
-<link href="app.css" rel="stylesheet"/>
-<body>
-<div id="example"></div>
-<script type="text/javascript" src="./build/app.js"></script>
+<html>
+	<head>
+		<title>Sticky Example</title>
+		<link href="app.css" rel="stylesheet"/>
+	</head>
 
+	<body>
+		<div id="example"></div>
+		<script type="text/javascript" src="./build/app.js"></script>
+	</body>
+</html>
