--- a/index.html
+++ b/index.html
@@ -16,20 +16,18 @@
 			  position: fixed;
 			  top: 0;
 		  }
-
-			.supersticky nav:after {
-				content: ' - activated!';
-			}
 		</style>
 	</head>
 	<body>
 		<div id="example"></div>
-		<script type="text/javascript" src="https://rawgit.com/captivationsoftware/react-sticky/master/lib/sticky.js"></script>
+		<script type="text/javascript" src="lib/sticky.js"></script>
 		<script type="text/babel">
 			class Example extends React.Component {
 				constructor(props) {
 					super(props);
 					this.state = {
+						stickyText: 'I dunno',
+												
 						// Sticky style (2/2)
 						partialStyle: {
 							left: 0,
@@ -40,7 +38,7 @@
 				}
 
 				handleStickyStateChange(isStuck) {
-					console.log('Sticky?', isStuck ? 'Yep!' : 'Nope!');
+					this.setState({stickyText: isStuck ? 'Yep!' : 'Nope!'});
 				}
 
 				render() {
@@ -51,7 +49,7 @@
 								type={React.DOM.header}
 								onStickyStateChange={this.handleStickyStateChange}>
 
-								<nav>Header (sticky)</nav>
+								<nav>Am I Stuck? {this.state.stickyText}</nav>
 							</Sticky>
 							<main>
 								Main content
