--- a/examples/timeline/index.html
+++ b/examples/timeline/index.html
@@ -2,29 +2,29 @@
 <html>
 
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Timeline Demo</title>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.min.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.min.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.5.1/lodash.min.js"></script>
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-	<link href="styles.css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>react-sticky</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.5.1/lodash.min.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+  <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
-	<div id="example"></div>
-	<script type="text/javascript" src="../../dist/react-sticky.js"></script>
-	<script type="text/babel">
+  <div id="example"></div>
+  <script type="text/javascript" src="../../dist/react-sticky.js"></script>
+  <script type="text/babel">
 
-	const { StickyContainer, Sticky } = ReactSticky;
+  const { StickyContainer, Sticky } = ReactSticky;
 
-	class Timeline extends React.Component {
-		render() {
-			let timeline = [2000, 2010].map((decade) => {
-				return (
-					<StickyContainer style={{zIndex: 4}}>
+  class Timeline extends React.Component {
+    render() {
+      let timeline = [2000, 2010].map((decade) => {
+        return (
+          <StickyContainer style={{zIndex: 4}}>
 						<Sticky style={{zIndex: 3}}>
 							<h2>{decade}s</h2>
 						</Sticky>
@@ -53,7 +53,7 @@
 				<StickyContainer>
 					<Sticky style={{zIndex: 5}}>
 						<header>
-							<h1 className="pull-left">&lt;Sticky /&gt; Demo</h1>
+							<h1 className="pull-left">react-sticky | Timeline</h1>
 							<div className="pull-right">
 								<a href="http://www.captivationsoftware.com" target="_blank">
 									<img src="http://www.captivationsoftware.com/images/logo-white.png" className="hidden-xs hidden-sm" alt="Captivation Software" />
