--- a/examples/timeline/index.html
+++ b/examples/timeline/index.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>react-sticky</title>
+  <title>react-sticky | timeline demo</title>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.min.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.min.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.5.1/lodash.min.js"></script>
-  <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-  <link href="http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+  <link href="http://www.captivationsoftware.com/favicon.ico" rel="icon" />
+  <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet" type="text/css" />
   <link href="styles.css" rel="stylesheet" />
 </head>
 
@@ -53,7 +54,7 @@
         <StickyContainer>
           <Sticky style={{zIndex: 5}}>
             <header>
-              <h1 className="pull-left">react-sticky | Timeline</h1>
+              <h1 className="pull-left">react-sticky | timeline demo</h1>
               <div className="pull-right">
                 <a href="http://www.captivationsoftware.com" target="_blank">
                   <img src="http://www.captivationsoftware.com/images/logo-white.png" className="hidden-xs hidden-sm" alt="Captivation Software" />
