--- a/examples/timeline/index.html
+++ b/examples/timeline/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>react-sticky | timeline demo</title>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.min.js"></script>
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.min.js"></script>
+  <script src="https://fb.me/react-15.0.1.min.js"></script>
+  <script src="https://fb.me/react-dom-15.0.1.min.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.5.1/lodash.min.js"></script>
   <link href="http://www.captivationsoftware.com/favicon.ico" rel="icon" />
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" />
