--- a/examples/timeline/index.html
+++ b/examples/timeline/index.html
@@ -23,25 +23,25 @@
 
   class Timeline extends React.Component {
     render() {
-      let timeline = [2000, 2010].map((decade) => {
+      let timeline = _.range(2000, 3000, 10).map((decade) => {
         return (
-          <StickyContainer style={{zIndex: 4}}>
-            <Sticky style={{zIndex: 3}}>
+          <StickyContainer style={{zIndex: 4}} data-container="x">
+            <Sticky style={{zIndex: 3}} data-sticky="x">
               <h2>{decade}s</h2>
             </Sticky>
             { _.range(0,10).map((i) => {
               return (
-                <StickyContainer style={{zIndex: 2}}>
-                  <Sticky>
+                <StickyContainer style={{zIndex: 2}} data-container="x">
+                  <Sticky data-sticky="x">
                     <h3>{decade + i}</h3>
                   </Sticky>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+	                  in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                   </p>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+	                  in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                   </p>
                 </StickyContainer>
               );
