Make 3d transform fix opt-in. (Closes #116)

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -32,7 +32,7 @@
             <div style={{ backgroundColor: '#fff' }}>
               <p>Start Scrolling!</p>
             </div>
-            <Sticky className="foo" onStickyStateChange={this.onStickyStateChange.bind(this)}>
+            <Sticky className="foo" onStickyStateChange={this.onStickyStateChange.bind(this)} withMobileFix>
               <header>
                 <h1 className="pull-left">react-sticky | basic demo</h1>
                 <div className="pull-right">
