--- a/examples/timeline/index.html
+++ b/examples/timeline/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>react-sticky | timeline demo</title>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+  <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
   <script src="https://fb.me/react-15.0.1.min.js"></script>
   <script src="https://fb.me/react-dom-15.0.1.min.js"></script>
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.5.1/lodash.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.5.1/lodash.min.js"></script> -->
   <link href="http://www.captivationsoftware.com/favicon.ico" rel="icon" />
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" />
   <link href="http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet" type="text/css" />
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div id="example"></div>
+  <!-- <div id="example"></div>
   <script type="text/javascript" src="../../dist/react-sticky.js"></script>
   <script type="text/babel">
 
@@ -83,7 +83,7 @@
   }
 
   ReactDOM.render(<Timeline />, document.getElementById('example'));
-  </script>
+  </script> -->
 </body>
 
 </html>
