--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -3,15 +3,14 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>react-sticky | basic demo</title>
+  <title>react-sticky by Captivation Software</title>
+
   <link href="http://www.captivationsoftware.com/favicon.ico" rel="icon" />
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet" type="text/css" />
-  <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
   <div id="mount"></div>
-  <script type="text/javascript" src="./basic.min.js"></script>
+  <script type="text/javascript" src="./basic.bundle.js"></script>
 </body>
 </html>
