Renamed example and fixed readme

--- a/examples/relative/index.html
+++ b/examples/relative/index.html
@@ -11,6 +11,6 @@
 
 <body>
   <div id="mount"></div>
-  <script type="text/javascript" src="./overflow.bundle.js"></script>
+  <script type="text/javascript" src="./relative.bundle.js"></script>
 </body>
 </html>
